--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(mplot3.laterality)
 export(preprocess_t1)
 export(snr)
 export(t1_dkt)
-export(test_wynton)
+export(test_deps)
 export(which_preprocess)
 import(ANTsR)
 import(data.table)
