--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,16 @@
 
 export(aal_paired_regions)
 export(cnr)
+export(labels2niftis)
+export(labels2nii)
 export(labelstats)
 export(labelstats1)
 export(labelstats_native)
 export(labelstats_native2)
 export(mplot3.laterality)
 export(preprocess_t1)
+export(readseglabels)
+export(seglabels2itksnap)
 export(snr)
 export(t1_dkt)
 export(test_deps)
